# coincident

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  noxfile.py  pyproject.toml  setup.bat  setup.sh  setup_bash.sh
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  pixi.yml  quicktest.yml  upstream.yml
docs/: api.rst  conf.py  datasets.md  index.md  installation.md  introduction.md  ipython_kernel_config.py  quickstart.ipynb
docs/_static/: custom.css
docs/datasets/: G-LiHT.ipynb  NCALM.ipynb  index.md  maxar.ipynb  noaa-coastal-lidar.ipynb  pcd.ipynb  pcd.md  pcd_background.md  vantor.ipynb
docs/examples/: additional_lidar.ipynb  cascading_search.ipynb  contextual_data.ipynb  dem_and_lpc.ipynb  elevation_plotting.ipynb  index.md  opentopo.ipynb  quickstart.ipynb  sliderule.ipynb  vendor_dems.ipynb
docs/user_guide/: contribute.md  datasets.md  index.md  installation.md  introduction.md  io.md
notebooks/agu2025/: CO_WestCentral_2019-UTM.ipynb  CO_WestCentral_2019.ipynb  common_functions.py
src/coincident/: __init__.py  _utils.py  pcd_fixtures.py
src/coincident/datasets/: __init__.py  csda.py  general.py  ground_control.py  maxar.py  nasa.py  neon.py  opentopo.py  planetary_computer.py  usgs.py  vantor.py
src/coincident/io/: __init__.py  download.py  gdal.py  proj.py  sliderule.py  xarray.py
src/coincident/io/transforms/: cop-dem-glo-30.gti  cop30_7912.vrt  nasadem.gti  nasadem_7912.vrt  threedep10_7912.vrt
src/coincident/overlaps/: __init__.py
src/coincident/plot/: __init__.py  matplotlib.py  utils.py
src/coincident/scripts/: __init__.py  generate_pcd.py
src/coincident/search/: __init__.py  _stac.py  _wesm.py  ground_control.py  main.py  neon_api.py  opentopo_api.py  stac.py  swath_polygons.csv  usgs_vendor_load.py  wesm.py
tests/: __init__.py  conftest.py  test_datasets.py  test_download.py  test_overlaps.py  test_package.py  test_plot.py  test_plot_helpers.py  test_search.py  test_sliderule.py  test_xarray.py
tests/data/: dem_tiny.tif  dem_tiny_utm.tif  points_tiny.gpkg  tiny.geojson
