[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [
  {name = "Scott Henderson", email = "scottyh@uw.edu"},
  {name = "David Shean", email = "dshean@uw.edu"},
  {name = "Jack Hayes", email = "jehayes@uw.edu"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
description = "Search and analysis of STV Precursor Coincident Datasets"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "coincident"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "aiobotocore[boto3]>=2.25.2,<3",
  "arro3-core",
  "contextily",
  "cql2",
  "geopandas",
  "ipykernel",
  "ipywidgets",
  "matplotlib",
  "matplotlib-scalebar",
  "maxar-platform>=1.0.7,<2",
  "pyarrow",
  "pystac-client",
  "odc-stac",
  "requests",
  "rioxarray",
  "s3fs>=2025.3.2,<2026",
  "scipy",
  "sliderule",
  "stac-asset>=0.4.7,<0.5",
  "rustac",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  # packaging pain, assume most people using conda
  #"gdal>=3.10",
  "cql2>=0.4.2,<0.5", # for STAC filtering tests (tests/test_search.py::test_maxar_search)
  "mypy>=1.15",
  "pre-commit>=4.4.0",
  "pylint>=3.3",
  "pytest>=8",
  "pytest-cov>=7.0.0,<8",
]
docs = [
  "folium", # comes w/ geopandas on conda-forge but not pypi
  "mapclassify",
  "myst-nb",
  "myst_parser>=0.13",
  "pydata-sphinx-theme>=0.16.0,<0.17",
  "sphinx>=8.0",
  "sphinx_autodoc_typehints",
  "sphinx_copybutton",
  "sphinx_design",
]

[project.urls]
"Bug Tracker" = "https://github.com/uw-cryo/coincident/issues"
Changelog = "https://github.com/uw-cryo/coincident/releases"
Discussions = "https://github.com/uw-cryo/coincident/discussions"
Homepage = "https://github.com/uw-cryo/coincident"

[tool.hatch]
build.hooks.vcs.version-file = "src/coincident/_version.py"
version.source = "vcs"

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
  "error", # NOTE: try to remove with maxar-platform>1.0.1
  "ignore::DeprecationWarning:lark",
  "ignore::DeprecationWarning:sliderule",
  "ignore:maxar_platform authentication error:UserWarning", # https://github.com/microsoft/planetary-computer-sdk-for-python/issues/58
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  "ignore:Inheritance class OAuth2Client from ClientSession is discouraged:DeprecationWarning", # Coming from sliderule and boto
  "ignore:datetime.datetime.utcnow().*:DeprecationWarning", # Optional imports
  "ignore:Unable to authenticate with Maxar API:UserWarning",
  "ignore:.* not found:UserWarning", # NOTE: should be able to remove with geopandas 1.1
  "ignore:.*shapely.geos.*:DeprecationWarning:geopandas", # NOTE: only occurring in CI Python 3.10?!
  "ignore:.*unclosed transport.*:ResourceWarning:asyncio",
  "ignore:PS_GITHUB_TOKEN is set:UserWarning", # from test_sliderule.py
]
log_cli_level = "INFO"
markers = [
  "network: marks test requiring internet (select with -o markers=network)",
]
minversion = "8.0"
testpaths = [
  "tests",
]
xfail_strict = true

[tool.coverage]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]
run.source = ["coincident"]

[tool.codespell]
ignore-words-list = "ALOS,ALS,HSI,als"
skip = "pixi.lock,docs/examples/elevation_plotting.ipynb"

[tool.mypy]
disallow_incomplete_defs = false
disallow_untyped_defs = false
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files = ["src", "tests"]
strict = true
warn_unreachable = true
warn_unused_configs = true
# NOTE: not sure why mypy not finding dependency libraries, so disabling this check...
# error: Cannot find implementation or library stub for module named "geopandas"  [import-not-found]
ignore_missing_imports = true

[[tool.mypy.overrides]]
disallow_incomplete_defs = true
disallow_untyped_defs = true
module = "coincident.*"

[tool.ruff.lint]
exclude = [
  "docs/*.ipynb",
]
extend-select = [
  "B", # flake8-bugbear
  "I", # isort
  "ARG", # flake8-unused-arguments
  "C4", # flake8-comprehensions
  "EM", # flake8-errmsg
  "ICN", # flake8-import-conventions
  "G", # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL", # pylint
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD", # pandas-vet
]
ignore = [
  "PLR09", # Too many <...>
  "PLR2004", # Magic value used in comparison
  "ISC001", # Conflicts with formatter
  "PLC0414", # explicit re-export
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["coincident._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]

[tool.pylint]
ignore-paths = [".*/_version.py"]
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "C0103", # Allow ALLCAPS variable names
  "W0212", # Access to a protected member
  "W0102", # Dangerous default value as argument []
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
#  E1101: Module 'rustac' has no 'to_arrow' member (no-member)
generated-member = ["rustac.to_arrow","rustac.from_arrow"]
max-module-lines=1500

[tool.pixi.workspace]
channels = ["conda-forge"]
# linux arm = "linux-aarch64"
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
# solve_group ensures same dependency versions *across* environments
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
docs = {features = ["docs"], solve-group = "default"}

# NOTE: pixi will match project.dependencies versions above but get them from conda-forge
# If a package is listed in project.dependencies but not repeated here, it is installed from pypi
[tool.pixi.dependencies]
python = "*"
arro3-core = ">=0.6.5,<0.7"
gdal = ">=3.10.3,<4"
geopandas = ">=1.1.1,<2"
ipykernel = ">=7.1.0,<8"
ipywidgets = ">=8.1.8,<9"
jsonschema = ">=4.25.1,<5"
libgdal-arrow-parquet = ">=3.10.3,<4"
matplotlib-base = ">=3.10.8,<4"
odc-stac = ">=0.4.1,<0.5"
pyarrow = ">=22.0.0,<23"
pystac-client = ">=0.9.0,<0.10"
requests = ">=2.32.5,<3"
rioxarray = ">=0.20.0,<0.21"
scipy = ">=1.16.3,<2"
sliderule = "5.*"
rustac = ">=0.9.0,<0.10"
tqdm = ">=4.67.1,<5"
contextily = ">=1.7.0,<2"
matplotlib-scalebar = ">=0.9.0,<0.10"
cartopy = ">=0.25.0,<0.26"

[tool.pixi.feature.dev.dependencies]
mypy = ">=1.18.2,<2"
pre-commit = ">=4.5.0,<5"
pylint = ">=4.0.3,<5"
pytest = ">=9.0.1,<10"

[tool.pixi.feature.docs.dependencies]
mapclassify = ">=2.10.0,<3"
myst-nb = ">=1.3.0,<2"
myst-parser = ">=4.0.1,<5"
pydata-sphinx-theme = ">=0.16.1,<0.17"
sphinx = ">=8.2.3,<9"
sphinx-autodoc-typehints = ">=3.5.2,<4"
sphinx-copybutton = ">=0.5.2,<0.6"
sphinx-design = ">=0.6.1,<0.7"

[tool.pixi.pypi-dependencies]
# Stuff not on conda-forge
coincident = {path = ".", editable = true}
cql2 = ">=0.4.2, <0.5"
types-requests = ">=2.32.4.20250913, <3"
#stac-asset = { version = ">=0.4.5"}
#cloudpathlib = { version = "0.20.0,<0.21", extras = ["s3"]}

[tool.pixi.feature.dev.tasks]
precommit = "pre-commit run --all-files"
# NOTE: consider --output-format=github for github actions
lint = "pylint src"
networktest = "pytest --cov --cov-report=xml --cov-report=term --durations=0"
test = "pytest -o markers=network -m 'not network' --cov --cov-report=xml --cov-report=term"

[tool.pixi.feature.docs.tasks]
# NOTE: || true to always update readthedocs even if there are errors
docs = "python -m sphinx --keep-going -T -b html -d docs/_build/doctrees -D language=en docs docs/_build/html || true"
rebuild_docs = "rm -rf docs/_build ; python -m sphinx --keep-going -T -b html -d docs/_build/doctrees -D language=en docs docs/_build/html || true"
